# gotc

./: .gitignore  .golangci.yml  CMakeLists.txt  Makefile  README.md  benchmark.bash  go.mod  gpu_benchmark.bash  main  main.go  report.md  timing.bash
block/: block.go
blockchain/: block.go  blockchain.go  header.go  transaction.go  transactionSlice.go
constants/: constants.go
cuda/: CMakeLists.txt
cuda/include/: cmine.h  mine.cuh  sha256.cuh
cuda/src/: mine.cu
data/: benchmark1.txt  benchmark4.txt  blockchain.json  timing.txt  transactions.txt
hash/: hash.go
header/: header.go
merkle/: merkle.go
miner/: benchmark.go  contexts.go  miner.go  pool.go
queue/: queue.go
rand/: rand.go
slurm/: gpu.sh  job.sh
sync/: barrier.go
transaction/: transaction.go  transactionSlice.go
utils/: utils.go
